--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build APK
 
 on: 
   push:
@@ -12,23 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout your repository code.
+      # Step 1: Checkout the repository
       - name: Checkout
         uses: actions/checkout@v2
 
-      # 2. Build the APK using Buildozer action.
+      # Step 2: Build the APK using Buildozer Action
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          # Command to run – by default it runs "buildozer android debug"
-          # You can override it by specifying "command: <your command>"
-          workdir: test_app
+          # If your buildozer.spec is in the root, use "."
+          # If it is in a subfolder (e.g., "src" or "app"), change the workdir accordingly.
+          workdir: .
           buildozer_version: stable
 
-      # 3. Upload the generated APK as an artifact.
-      - name: Upload artifacts
+      # Step 3: Upload the generated APK as an artifact
+      - name: Upload APK Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: package
+          name: apk-package
           path: ${{ steps.buildozer.outputs.filename }}
